# hipSZ

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Installing.cmake
examples/: CMakeLists.txt  hipSZ.cpp  hipSZ_test_f32.cpp  hipSZ_test_f64.cpp
include/: hipSZ.h
include/hipSZ/: hipSZ_entry_f32.h  hipSZ_entry_f64.h  hipSZ_kernels_f32.h  hipSZ_kernels_f64.h  hipSZ_timer.h  hipSZ_utility.h
python/: example-hpc.py  example-torch.py  pycuSZp.py
script/: hipSZ_test.sh
src/: hipSZ.hip  hipSZ_entry_f32.hip  hipSZ_entry_f64.hip  hipSZ_kernels_f32.hip  hipSZ_kernels_f64.hip  hipSZ_timer.hip  hipSZ_utility.hip
